kernel/tests/snapshots/runtime_cli_snapshots/validate_soundness_result__fail.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "comments": "Add the base case.",
      "node": "MainResult",
      "overall": "REJECT",
      "soundness": {
        "decision": "UNSOUND",
        "explanation": "The induction skips the base case."
      },
      "summary": "Missing base case."
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_soundness_result_ok"
}
