kernel/tests/snapshots/runtime_cli_snapshots/validate_soundness_result__pass.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "comments": "",
      "node": "MainResult",
      "overall": "APPROVE",
      "soundness": {
        "decision": "SOUND",
        "explanation": "Prose proof is rigorous; no logical gaps detected."
      },
      "summary": "Sound."
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_soundness_result_ok"
}
